--- a/p-2/energy-storage.html
+++ b/p-2/energy-storage.html
@@ -485,7 +485,7 @@
                     <div class="section--inner none">
                         <div class="fade-content">
                             <div class="fade-content--title">
-                                <p style="margin-top: 330px; width: 750px; margin-left: 300px;">Select a region on the map where our solar or wind energy production is already up and running, install your equipment to start generating your kilowatt assets (NFTs) right away!
+                                <p style="margin-top: 330px; width: 750px; margin-left: 100px;">Select a region on the map where our solar or wind energy production is already up and running, install your equipment to start generating your kilowatt assets (NFTs) right away!
                                     </p>
                                     <img style="display: block; margin-left: 304px; margin-top: 150px;" src="./images/Рисунок21.png" alt="">
                             </div>
@@ -874,7 +874,7 @@
 
 
 
-                <footer style="left: -1240px;" data-bgcolor data-textcolor class="section footer-section full white-logo" data-scroll data-scroll-offset="10%">
+                <footer  data-bgcolor data-textcolor class="section footer-section full white-logo margin" data-scroll data-scroll-offset="10%">
                     <div class="floating-socials office-socials">
                         <a class="social-icon" href="https://www.linkedin.com/company/elcogen" target="_blank">
                             <span class="social-icon--holder linkedin"></span>
@@ -943,7 +943,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div style="display: flex; gap: 45px;">
+                                <div class="map">
                                     <div><iframe style="width: 300px; height: 200px;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab643ae23900a2c2f7301844f0b2c768c522392ef80bb4d4903a5a7e9bed71f44&amp;source=constructor" width="500" height="400" frameborder="0"></iframe></div>
                                     <div><iframe style="width: 300px; height: 200px;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab643ae23900a2c2f7301844f0b2c768c522392ef80bb4d4903a5a7e9bed71f44&amp;source=constructor" width="500" height="400" frameborder="0"></iframe></div>
                                     <div><iframe style="width: 300px; height: 200px;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab643ae23900a2c2f7301844f0b2c768c522392ef80bb4d4903a5a7e9bed71f44&amp;source=constructor" width="500" height="400" frameborder="0"></iframe></div>
