--- a/p-2/energy-storage.html
+++ b/p-2/energy-storage.html
@@ -262,7 +262,7 @@
 
                                             </p>
                                         </div>
-                                        <div class="img_country">
+                                        <div data-scroll data-scroll-sticky data-scroll-target="#cc" class="img_country">
                                             <div><a href="#"><img class="img_country-1" src="./images/img-country/Рисунок1.png" alt=""></a></div>
                                             <div><a href="#"><img class="img_country-2" src="./images/img-country/Рисунок2.png" alt=""></a></div>
                                             <div><a href="#"><img class="img_country-3" src="./images/img-country/Рисунок3.png" alt=""></a></div>
@@ -273,7 +273,7 @@
                                             <div style="position: relative;"><a href="#"><img class="img_country-8" src="./images/img-country/Рисунок8.png" alt=""></a></div>
                                         </div>
 
-                                        <div class="textblock">
+                                        <div id="cc" class="textblock">
                                             <div class="textblock--inner is-flex appear-text">
 
                                                 <div class="textblock--img-wrap">
@@ -752,10 +752,9 @@
                                     </div>
                                     <div class="mobile-single-slide">
                                         <div class="slider-content">
-                                            <h3>Стать частью новой энергетики уже сегодня!
+                                            <h3>Join the new era of energy today!
                                             </h3>
-                                            <p>Согласно докладу Международного энергетического агентства, глобальные расходы на чистую энергию, как ожидается, вырастут на 23 процента до 2025 года, достигнув 3,8 триллиона долларов, поскольку мир вливает деньги в возобновляемые источники энергии, электромобили и энергоэффективность.
-                                                Мы предлагаем Вам стать частью этого обновления, но за наш счёт.
+                                            <p>According to the report by the International Energy Agency, global investments in clean energy are expected to surge by 23% to $3.8 trillion by 2025. The world is directing its resources towards renewable energy, electric vehicles, and energy efficiency. We invite you to join us on this transformative journey, and the best part is, it's all on us.
                                                 </p>
                                         </div>
                                     </div>
@@ -766,7 +765,7 @@
                                     </div>
                                     <div class="mobile-single-slide">
                                         <div class="slider-content">
-                                            <p>Выберите на карте уже работающий регион, подключите оборудование для производства солнечной или ветровой энергетики, чтобы получать свои киловатт- активы (NFT) прямо сейчас!
+                                            <p>Select a region on the map where our solar or wind energy production is already up and running, install your equipment to start generating your kilowatt assets (NFTs) right away!
                                             </p>
                                         </div>
                                     </div>
@@ -858,6 +857,120 @@
                                                       В2В/ Кооперации
                                                     </label>
                                                   </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mobile-single-slide--wrap" style="background:url(./images/img_page/Рисунок2.png);">
+                                    <div class="mobile-slider--title">
+                                    </div>
+                                    <div class="mobile-single-slide">
+                                        <div class="slider-content">
+                                            <p>Select a region on the map where our solar or wind energy production is already up and running, install your equipment to start generating your kilowatt assets (NFTs) right away!
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mobile-single-slide--wrap" style="background:url(./images/img_page/Рисунок4.png);">
+                                    <div class="mobile-slider--title">
+                                    </div>
+                                    <div class="mobile-single-slide">
+                                        <div class="slider-content">
+                                            <div class="country" style="">
+                                                <h3 style="font-size: 14px;">Select the equipment package that suits your roof or land, and receive detailed information directly to your email:
+                                                </h3>
+                                                <h4 style="text-align: center; color: #ffffff;">Small Capacities / Individuals / Households / Solar Generation:
+                                                </h4>
+                                                <form style="color: #ffffff;">
+                                                    <label >
+                                                      <input type="checkbox" name="languages" value="Участки/ Продажа">
+                                                      Package 35 kW / Rental payment - 10 kW or 3,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                      <input type="checkbox" name="languages" value="Участки/ Кооперации">
+                                                      Package 50 kW / Rental payment - 15 kW or 4,500.00 ($/€/£/n) per yearx
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                      <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                      Package 70 kW / Rental payment - 20 kW or 6,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                      <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                      Package 100 kW / Rental payment - 30 kW or 9,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                  </form>
+                                                  <h4 style="text-align: center; margin-top: 30px; color: #ffffff;">Medium Capacities / Legal Entities / Solar and Wind Generation:
+                                                </h4>
+                                                <form style="color: #ffffff;">
+                                                    <label>
+                                                      <input type="checkbox" name="languages" value="Участки/ Продажа">
+                                                      Package 100 kW / Rental payment - 30 kW or 9,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                      <input type="checkbox" name="languages" value="Участки/ Кооперации">
+                                                      Package 200 kW / Rental payment - 60 kW or 18,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                      <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                      Package 300 kW / Rental payment - 90 kW or 27,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                        Package 400 kW / Rental payment - 120 kW or 36,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                        Package 500 kW / Rental payment - 150 kW or 45,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                        Package 600 kW / Rental payment - 180 kW or 54,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                        Package 600 kW / Rental payment - 180 kW or 54,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                        Package 700 kW / Rental payment - 210 kW or 63,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                        Package 800 kW / Rental payment - 240 kW or 72,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                        Package 900 kW / Rental payment - 270 kW or 81,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                    <br>
+                                                    <label>
+                                                        <input type="checkbox" name="languages" value="В2В/ Кооперации">
+                                                        Package 1,000 kW / Rental payment - 300 kW or 90,000.00 ($/€/£/n) per year
+                                                    </label>
+                                                  </form>
+                                                  <h4 style="text-align: center; margin-top: 30px; color: #ffffff;">Farm / Legal Entity / Solar and Wind Generation:
+                                                </h4>
+                                                <form style="color: #ffffff;">
+                                                    <label>
+                                                      <input type="checkbox" name="languages" value="Участки/ Продажа">
+                                                      Package 3,300 kW (Farm) / Rental payment - 990 kW or 297,000.00 ($/€/£/n) per yea
+                                                    </label>
+                                                  </form>
+                                                  <div class="sub" style="margin-left: 90px; padding-top: 10px;">
+                                                    <img src="./images/Рисунок21.png" alt="">
+                                                    <p style="font-size: 14px; line-height: 0px;">Submit Information</p>
                                             </div>
                                         </div>
                                     </div>
