--- a/p-2/energy-storage.html
+++ b/p-2/energy-storage.html
@@ -102,33 +102,33 @@
 <div id="page" class="site">
     <div id="logo" class="logo">
         <div class="logo-left">
-            <a href="https://elcogen.com" class="main-logo">
+            <a href="./seg.html" class="main-logo">
                 <img src="./images/logo.png" alt="">
                 SEG Program
             </a>
             <div class="logo-menu">
-                <a class="logo-menu-block">
+                <a href="./seg.html" class="logo-menu-block">
                     <img src="./images/top1.png" alt="">
                 </a>
-                <a class="logo-menu-block">
+                <a href="./seg.html" class="logo-menu-block">
                     <img src="./images/top2.png" alt="">
                 </a>
-                <a class="logo-menu-block">
+                <a href="./seg.html" class="logo-menu-block">
                     <img src="./images/top3.png" alt="">
                 </a>
-                <a class="logo-menu-block">
+                <a href="./seg.html" class="logo-menu-block">
                     <img src="./images/top4.png" alt="">
                 </a>
-                <a class="logo-menu-block">
+                <a href="./seg.html" class="logo-menu-block">
                     <img src="./images/top4.png" alt="">
                 </a>
-                <a class="logo-menu-block">
+                <a href="./seg.html" class="logo-menu-block">
                     <img src="./images/top5.gif" alt="">
                 </a>
-                <a class="logo-menu-block">
+                <a href="./seg.html" class="logo-menu-block">
                     <img src="./images/top6.png" alt="">
                 </a>
-                <a class="logo-menu-block">
+                <a href="./seg.html" class="logo-menu-block">
                     <img src="./images/top7.png" alt="">
                 </a>
 
@@ -143,18 +143,18 @@
             <div class="menu-col is-hidden-mobile">
                 <div class="menu-col--inner">
                     <div class="menu-block">
-                        <a href="#" class="modal-btn" data-modal="menu-products">
+                        <a href="./seg.html" class="modal-btn" data-modal="menu-products">
                             <img src="./images/menu1.png" alt="">
                         </a>
                     </div><!-- single menu item -->
                     <div class="menu-block">
-                        <a href="#" class="modal-btn active-parent" data-modal="menu-industries">
+                        <a href="./seg.html" class="modal-btn active-parent" data-modal="menu-industries">
                             <img src="./images/menu2.png" alt="">
                             <p>Industries</p>
                         </a>
                     </div><!-- single menu item -->
                     <div class="menu-block">
-                        <a href="#" class="modal-btn" data-modal="menu-sustainability">
+                        <a href="./seg.html" class="modal-btn" data-modal="menu-sustainability">
                             <img src="./images/menu3.png" alt="">
                             <p>Projects</p>
                         </a>
