--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <!-- <h1>My works</h1>
+      <h1>My works</h1>
       <div class="wrapper">
         <div class="works">
           <a target="_blank" class="link" href="./html-portfolio/index.html">HTML Portfolio</a>
@@ -37,10 +37,10 @@
         </div>
         <div class="works">
           <a target="_blank" class="link" href="./Cloud/index.html">Cloud - Landing Page</a>
-        </div> -->
-        <div class="works">
-          <a target="_blank" class="link" href="./p-2/energy-storage.html">Storege</a>
         </div>
+        <!-- <div class="works">
+          <a target="_blank" class="link" href="./p-2/energy-storage.html">Storege</a>
+        </div> -->
       </div>
     </div>
   </body>
