--- a/p-2/energy-storage.html
+++ b/p-2/energy-storage.html
@@ -876,7 +876,7 @@
                                     </div>
                                     <div class="mobile-single-slide">
                                         <div class="slider-content">
-                                            <div class="country" style="">
+                                            <div class="country">
                                                 <h3 style="font-size: 14px;">Select the equipment package that suits your roof or land, and receive detailed information directly to your email:
                                                 </h3>
                                                 <h4 style="text-align: center; color: #ffffff;">Small Capacities / Individuals / Households / Solar Generation:
