Добавляет стили для формы

--- a/Boots/index.html
+++ b/Boots/index.html
@@ -12,7 +12,12 @@
         <div class="img-wrapper">
             <img class="img" src="./flying-pizza-with-flying-ingredients-on-background_843762-788.jpg" alt="Pizza">
         </div>
-        
+        <form id="form">
+            <input class="input" type="text" placeholder="Ваше имя">
+            <input class="input" type="email" placeholder="Email">
+            <input class="input" type="tel" placeholder="Телефон">
+            <button class="button" type="submit" id="order">Отправить</button>
+        </form>
         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci odit officiis reiciendis dicta beatae molestias, deserunt similique nam aspernatur voluptate sed illo voluptas exercitationem vero eos autem quasi perspiciatis? Architecto.</p>
         <button class="button" type="button">Купить</button>
     </div>
