Изменят стили для формы

--- a/Boots/index.html
+++ b/Boots/index.html
@@ -12,7 +12,7 @@
         <div class="img-wrapper">
             <img class="img" src="./flying-pizza-with-flying-ingredients-on-background_843762-788.jpg" alt="Pizza">
         </div>
-        <form id="form">
+        <form id="form" class="form">
             <input class="input" type="text" placeholder="Ваше имя" id="user_name">
             <input class="input" type="email" placeholder="Email" id="user_email">
             <input class="input" type="tel" placeholder="Телефон" id="user_phone">
@@ -29,7 +29,7 @@
 
         buy.addEventListener('click', () => {
             document.getElementById('root').style.display = 'none';
-            document.getElementById('form').style.display = 'block';
+            document.getElementById('form').style.display = 'flex';
             document.getElementById('user_name').value = tg.initDataUnsafe.user.first_name + ' ' + tg.initDataUnsafe.user.last_name;
         });
 
