Добавляет калькулятор jsx

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <link rel="icon" href="./favicon.ico" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
@@ -16,7 +17,7 @@
             rel="stylesheet"
         />
         <title>Calculator</title>
-        <script defer="defer" src="./static/js/main.4e0aa4c8.js"></script>
+        <script defer="defer" src="./static/js/main.d7079994.js"></script>
         <link href="./static/css/main.e3caefda.css" rel="stylesheet" />
     </head>
     <body>
