--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <div class="works">
           <a target="_blank" class="link" href="./Cloud/index.html">Cloud - Landing Page</a>
         </div>
+        <div class="works">
+          <a target="_blank" class="link" href="./Calculator/index.html">Калькулятор JSX</a>
+        </div>
         <!-- <div class="works">
           <a target="_blank" class="link" href="./p-2/energy-storage.html">Storege</a>
         </div> -->
