Добавляет приложение weather

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <div class="works">
           <a target="_blank" class="link" href="./Calculator/index.html">Калькулятор JSX</a>
         </div>
+        <div class="works">
+          <a target="_blank" class="link" href="./Weather/index.html">Weather App</a>
+        </div>
         <!-- <div class="works">
           <a target="_blank" class="link" href="./p-2/energy-storage.html">Storege</a>
         </div> -->
