--- a/Header/index.html
+++ b/Header/index.html
@@ -195,7 +195,7 @@
             </div>
         </div>
         <div class="wrapper-container">
-            <div class="container" style="position: relative">
+            <div class="container" style="position: relative; width: 100%;">
                 <div id="category-wrapper" style="position: absolute; top: 0px; background: #fff; width: 825px; left: 0; border-radius: 0px 0px 14px 14px;">
                     <div class="tab" id="tabList" style="display: none">
                         <div style="display: flex; justify-content: space-between">
