--- a/Header/index.html
+++ b/Header/index.html
@@ -27,7 +27,7 @@
             <div class="container header-container-main">
                 <div class="header-container">
                     <div class="header-logo">
-                        <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="170px" height="44px" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                        <svg class="header-logo-svg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="170px" height="44px" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
                         viewBox="0 0 424.01 102.73"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="header-search-pannel">
-                    <input class="header-search-input" type="text" placeholder="Поиск товара по каталогу">
+                    <input onkeydown="openCatalog(event);" class="header-search-input" type="text" placeholder="Поиск товара по каталогу">
                     <div class="header-search">
                         <?xml version="1.0" ?><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g><path d="M0 0h24v24H0z" fill="none"/><path d="M18.031 16.617l4.283 4.282-1.415 1.415-4.282-4.283A8.96 8.96 0 0 1 11 20c-4.968 0-9-4.032-9-9s4.032-9 9-9 9 4.032 9 9a8.96 8.96 0 0 1-1.969 5.617zm-2.006-.742A6.977 6.977 0 0 0 18 11c0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7a6.977 6.977 0 0 0 4.875-1.975l.15-.15z"/></g></svg>
                     </div>
