--- a/Header/index.html
+++ b/Header/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="./reset.css">
 </head>
 <body>
+    <div>
+        <div class="container header-top">
+            <div class="header-top-left">
+                <div class="header-top-left-item">
+                    <svg style="width: 15px; height: 15px; margin-right: 5px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path fill="#fff" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M18.92 351.2l108.5-46.52c12.78-5.531 27.77-1.801 36.45 8.98l44.09 53.82c69.25-34 125.5-90.31 159.5-159.5l-53.81-44.04c-10.75-8.781-14.41-23.69-8.974-36.47l46.51-108.5c6.094-13.91 21.1-21.52 35.79-18.11l100.8 23.25c14.25 3.25 24.22 15.8 24.22 30.46c0 252.3-205.2 457.5-457.5 457.5c-14.67 0-27.18-9.968-30.45-24.22l-23.25-100.8C-2.571 372.4 5.018 357.2 18.92 351.2z"/></svg>
+                    <span>Заказ звонка!</span>
+                </div>
+                <div style="padding: 0px 5px; border: 1px solid #EAEDF7; border-radius: 6px">
+                    <a style="text-decoration: none; color: #000" href="mailto:info@shop-avd.ru">info@shop-avd.ru</a>
+                </div>
+            </div>
+            <div class="header-top-right">
+                <div class="header-top-right-item">
+                    <svg style="width: 15px; height: 15px; margin-right: 5px" enable-background="new 0 0 800 800" id="Layer_1" version="1.1" viewBox="0 0 800 800" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M289.1,450.1c1.1,0,3.2,0,4.3,0c7.5,7.5,13.9,14.9,21.3,21.3c10.7,9.6,16,22.4,16,36.3v2.1c0,9.6-3.2,19.2-8.5,27.7   l-81.1,115.2c-6.4,9.6-7.5,22.4-2.1,33.1s16,17.1,28.8,17.1h256c11.7,0,22.4-6.4,28.8-17.1c5.3-10.7,4.3-23.5-2.1-33.1l-81.1-115.2   c-5.3-8.5-8.5-18.1-8.5-27.7v-2.1c0-13.9,5.3-26.7,16-36.3c7.5-6.4,14.9-13.9,21.3-21.3c1.1,0,3.2,0,5.3,0   C667.7,423.5,779.7,336,779.7,234.7c0-65.1-52.3-117.3-117.3-117.3c-11.7,0-22.4,2.1-33.1,5.3c-3.2-14.9-16-26.7-32-26.7H192   c-16,0-28.8,11.7-30.9,26.7c-10.7-3.2-21.3-5.3-33.1-5.3c-65.1,0-117.3,52.3-117.3,117.3C10.7,336,122.7,423.5,289.1,450.1z    M460.8,640H328.5l45.9-65.1c13.9-19.2,20.3-41.6,20.3-65.1c0,23.5,7.5,45.9,20.3,65.1L460.8,640z M622.9,198.4   c9.6-11.7,24.5-18.1,39.5-18.1c29.9,0,53.3,23.5,53.3,53.3c0,55.5-64,108.8-160,137.6C587.7,318.9,611.2,258.1,622.9,198.4z    M563.2,160c-10.7,93.9-64,202.7-132.3,264.5c-23.5,21.3-37.3,51.2-37.3,83.2c0-32-13.9-61.9-37.3-83.2   C289.1,362.7,235.7,253.9,226.1,160H563.2z M128,181.3c14.9,0,28.8,6.4,38.4,17.1c10.7,58.7,35.2,120.5,67.2,173.9   c-94.9-28.8-158.9-82.1-158.9-137.6C74.7,204.8,99.2,181.3,128,181.3z"/></g></svg>
+                    <span>Скидки</span>
+                </div>
+                <div class="header-top-right-item-user">
+                    <span style="margin-right: 5px;">Личный кабинет</span>
+                    <svg enable-background="new 0 0 50 50" height="8px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="8px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><rect fill="none" height="50" width="50"></rect><polygon points="47.25,15 45.164,12.914 25,33.078 4.836,12.914 2.75,15 25,37.25 "></polygon></svg>
+                </div>
+            </div>
+        </div>
+    </div>
         <nav id="top" class="visible-md visible-lg">
             <div class="container">
                 <div class="pull-left">
@@ -91,10 +114,10 @@
                             <span style="font-size: 12px; color: #768292;">Звонки бесплатные</span>
                         </div>
                         <div class="drop-icon-infos">
-                            <?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 50 50" height="8px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="8px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><rect fill="none" height="50" width="50"/><polygon points="47.25,15 45.164,12.914 25,33.078 4.836,12.914 2.75,15 25,37.25 "/></svg>
+                            <svg enable-background="new 0 0 50 50" height="8px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="8px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><rect fill="none" height="50" width="50"/><polygon points="47.25,15 45.164,12.914 25,33.078 4.836,12.914 2.75,15 25,37.25 "/></svg>
                         </div>
                         <ul class="dropdown-menu drop-contacts ch-dropdown" style="display: none;" id="drop-contacts">
-                            <li>Контактная информация ООО "ШОП АВД"</li>
+                            <li style="font-weight: 700;">Контактная информация <br><span style="font-size: 12px; font-weight: 400;">ООО "ШОП АВД"</span> </li>
                             <li><a href="tel:+88003501698" target="_blank">8 (800) 350-16-98</a></li>
                             <li><a href="tel:+74993501698" target="_blank">7 (499) 350-16-98</a></li>
                             <li>
@@ -132,7 +155,15 @@
                             </div>
                             info@shop-avd.ru</a>
                             </li>
-        </ul>
+                            <li>
+                                <a href=""><span style="font-size: 13px; color: #4060f3;">Заказать обратный звонок</span></a>
+                            </li>
+                            <li>
+                                <a href="https://shop-avd.ru/contact-us/">
+                                    <span style="font-size: 11px; color: #4060f3;">Перейти на страницу контактов</span>
+                                </a>
+                            </li>
+                        </ul>
                 </div>
                 <div class="pull-right">
                     <div class="header-account">
@@ -189,6 +220,59 @@
                                             <div class="item-name himg">Контакты</div>
                                         </a>
                                     </li>
+                                    <li id="customers" class="section_1" style="width: 135.875px;">
+                                        <a href="apple-store" class="parent-link">
+                                            <div style="margin-right: 5px;" class="item-name himg">Покупателям</div>
+                                            <svg enable-background="new 0 0 50 50" height="8px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="8px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><rect fill="none" height="50" width="50"/><polygon points="47.25,15 45.164,12.914 25,33.078 4.836,12.914 2.75,15 25,37.25 "/></svg>
+                                        </a>
+                                        <ul class="dropdown-menu drop-contacts ch-dropdown" style="display: none; width: 185px; top: 35px;" id="drop-customers">
+                                            <li style="display: flex; align-items: center;">
+                                                <div style="width: 30px; display: flex; justify-content: center; align-items: center">
+                                                    <svg height="20" viewBox="0 0 48 48" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h48v48H0zm36.62 12L31.1 22z" fill="none"/><path d="M22 18h4v-6h6V8h-6V2h-4v6h-6v4h6v6zm-8 18c-2.21 0-3.98 1.79-3.98 4s1.77 4 3.98 4 4-1.79 4-4-1.79-4-4-4zm20 0c-2.21 0-3.98 1.79-3.98 4s1.77 4 3.98 4 4-1.79 4-4-1.79-4-4-4zm-19.65-6.5c0-.09.02-.17.06-.24l1.8-3.26h14.9c1.5 0 2.81-.83 3.5-2.06l7.72-14.02L38.83 8h-.01l-2.21 4-5.51 10H17.07l-.26-.54L12.32 12l-1.9-4-1.89-4H2v4h4l7.2 15.17-2.71 4.9c-.31.58-.49 1.23-.49 1.93 0 2.21 1.79 4 4 4h24v-4H14.85c-.28 0-.5-.22-.5-.5z"/></svg>
+                                                </div>
+                                                <span style="margin-left: 5px;">
+                                                    Получить скидку
+                                                </span>
+                                            </li>
+                                            <li style="display: flex; align-items: center;">
+                                                <div style="width: 30px; display: flex; justify-content: center; align-items: center">
+                                                    <svg width="22" height="22" enable-background="new 0 0 512 512" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Layer_1"/><g id="Layer_2"><g><path d="M142,88.7c-4.1,0-7.5,3.4-7.5,7.5v299.6c0,1.5,0.4,2.9,1.3,4.2c0.5,0.8,1.2,1.4,1.9,2l28.5,20c2.6,1.8,6,1.8,8.6,0    l24.2-17l24.2,17c2.6,1.8,6,1.8,8.6,0l24.2-17l24.2,17c1.3,0.9,2.8,1.4,4.3,1.4s3-0.5,4.3-1.4l24.2-17l24.2,17    c2.6,1.8,6,1.8,8.6,0l28.5-20c1-0.7,1.7-1.5,2.3-2.5c0.6-1.1,0.9-2.3,0.9-3.6V96.2c0-4.1-3.4-7.5-7.5-7.5H142z M362.5,391.9    l-21,14.7l-24.2-17c-1.3-0.9-2.8-1.4-4.3-1.4s-3,0.5-4.3,1.4l-24.2,17l-24.2-17c-2.6-1.8-6-1.8-8.6,0l-24.2,17l-24.2-17    c-2.6-1.8-6-1.8-8.6,0l-24.2,17l-21-14.7V103.7h213V391.9z"/><path d="M187,164.6h9.5l19.4,50.1c1.1,2.9,3.9,4.8,7,4.8h66.2c3.1,0,5.9-1.9,7-4.8l19.4-50.1h9.5c4.1,0,7.5-3.4,7.5-7.5    s-3.4-7.5-7.5-7.5h-24.7l-7.1-22c-1.3-3.9-5.5-6.1-9.4-4.8c-3.9,1.3-6.1,5.5-4.8,9.4l5.6,17.4h-57l5.6-17.4    c1.3-3.9-0.9-8.2-4.8-9.4c-3.9-1.3-8.2,0.9-9.4,4.8l-7.1,22H187c-4.1,0-7.5,3.4-7.5,7.5S182.9,164.6,187,164.6z M284,204.5h-56    l-15.5-39.9h4.6c0,0,0,0,0,0s0,0,0,0h77.6c0,0,0,0,0,0s0,0,0,0h4.6L284,204.5z"/><path d="M287.1,241.8h-95.4c-4.1,0-7.5,3.4-7.5,7.5s3.4,7.5,7.5,7.5h95.4c4.1,0,7.5-3.4,7.5-7.5S291.2,241.8,287.1,241.8z"/><path d="M308.4,249.3c0,4.1,3.4,7.5,7.5,7.5h18.9c4.1,0,7.5-3.4,7.5-7.5s-3.4-7.5-7.5-7.5h-18.9    C311.8,241.8,308.4,245.2,308.4,249.3z"/><path d="M287.1,282.8h-95.4c-4.1,0-7.5,3.4-7.5,7.5s3.4,7.5,7.5,7.5h95.4c4.1,0,7.5-3.4,7.5-7.5S291.2,282.8,287.1,282.8z"/><path d="M334.8,282.8h-18.9c-4.1,0-7.5,3.4-7.5,7.5s3.4,7.5,7.5,7.5h18.9c4.1,0,7.5-3.4,7.5-7.5S338.9,282.8,334.8,282.8z"/><path d="M287.1,323.7h-95.4c-4.1,0-7.5,3.4-7.5,7.5s3.4,7.5,7.5,7.5h95.4c4.1,0,7.5-3.4,7.5-7.5S291.2,323.7,287.1,323.7z"/><path d="M334.8,323.7h-18.9c-4.1,0-7.5,3.4-7.5,7.5s3.4,7.5,7.5,7.5h18.9c4.1,0,7.5-3.4,7.5-7.5S338.9,323.7,334.8,323.7z"/></g></g></svg>
+                                                </div>
+                                                <span style="margin-left: 5px;">Как заказать?</span>
+                                            </li>
+                                            <li style="display: flex; align-items: center;">
+                                                <div style="width: 30px; display: flex; justify-content: center; align-items: center">
+                                                    <svg class="bi bi-geo-alt" fill="currentColor" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg"><path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/><path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/></svg>
+                                                </div>
+                                                <span style="margin-left: 5px;">О компании</span>
+                                            </li>
+                                            <li style="display: flex; align-items: center;">
+                                                <div style="width: 30px; display: flex; justify-content: center; align-items: center">
+                                                    <svg width="20" data-name="Layer 1" id="Layer_1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title/><path d="M16,20.949a9,9,0,1,1,9-9A9.01,9.01,0,0,1,16,20.949Zm0-16a7,7,0,1,0,7,7A7.008,7.008,0,0,0,16,4.949Z"/><path d="M16,16.9a4.949,4.949,0,1,1,4.949-4.949A4.954,4.954,0,0,1,16,16.9ZM16,9a2.949,2.949,0,1,0,2.949,2.949A2.952,2.952,0,0,0,16,9Z"/><path d="M12.34,29.05c-.024,0-.046,0-.069,0a1,1,0,0,1-.833-.567L9.186,23.762l-5.231-.233a1,1,0,0,1-.788-1.552l4.76-7.18A1,1,0,0,1,9.593,15.9L5.81,21.609l4.065.182a1,1,0,0,1,.857.568l1.749,3.665,2.685-4.056a1,1,0,1,1,1.668,1.1l-3.66,5.53A1,1,0,0,1,12.34,29.05Z"/><path d="M17.85,20.735a1,1,0,0,1-1-1v-.01a1,1,0,1,1,1,1Z"/><path d="M19.66,29.05a1,1,0,0,1-.834-.448l-5.509-8.308a1,1,0,1,1,1.718-1.029l4.484,6.759,1.749-3.665a1,1,0,0,1,.857-.568l4.065-.182L22.407,15.9A1,1,0,0,1,24.073,14.8l4.76,7.18a1,1,0,0,1-.788,1.552l-5.231.233L20.563,28.48a1,1,0,0,1-.834.567C19.706,29.049,19.684,29.05,19.66,29.05Z"/></svg>
+                                                </div>
+                                                <span style="margin-left: 5px;">Гарантия</span>
+                                            </li>
+                                            <li style="display: flex; align-items: center;">
+                                                <div style="width: 30px; display: flex; justify-content: center; align-items: center">
+                                                    <svg enable-background="new 0 0 65 65" height="20px" id="Layer_1" version="1.1" viewBox="0 0 65 65" width="20px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M18.034,29.77c-1.902,0-3.45,1.548-3.45,3.451c0,1.903,1.548,3.452,3.45,3.452c1.904,0,3.453-1.549,3.453-3.452  C21.486,31.318,19.938,29.77,18.034,29.77z"/><circle cx="50.102" cy="10.392" r="1.33"/><path d="M57.903,6.506c-0.882-2.233-2.937-4.956-7.714-5.241c-0.031-0.001-0.06,0.004-0.091,0.005c-0.029,0-0.057-0.006-0.087-0.005  c-4.777,0.285-6.832,3.007-7.714,5.242c-2.593,6.561,1.508,18.032,5.767,23.468L25.861,52.257  c3.375-7.865,5.283-17.392,2.796-23.687c-1.721-4.357-5.364-6.822-10.534-7.13c-0.03-0.001-0.059,0.004-0.088,0.004  c-0.03,0-0.06-0.006-0.09-0.004c-5.168,0.308-8.81,2.772-10.531,7.128c-3.922,9.924,3.078,27.893,9.531,34.701  c0.007,0.008,0.016,0.013,0.023,0.021c0.003,0.003,0.004,0.007,0.007,0.01c0.004,0.004,0.01,0.006,0.015,0.01  c0.005,0.005,0.006,0.012,0.012,0.017c0.011,0.011,0.026,0.014,0.038,0.023c0.129,0.116,0.271,0.211,0.425,0.274  c0.005,0.002,0.01,0.004,0.016,0.006c0.012,0.005,0.025,0.006,0.038,0.011c0.166,0.061,0.339,0.097,0.515,0.097c0,0,0,0,0.001,0  c0,0,0,0,0,0s0,0,0,0c0,0,0.001,0,0.001,0c0.175,0,0.348-0.036,0.514-0.097c0.013-0.005,0.026-0.007,0.04-0.012  c0.005-0.002,0.01-0.003,0.016-0.006c0.153-0.063,0.294-0.158,0.424-0.273c0.011-0.01,0.026-0.013,0.037-0.023  c0.006-0.006,0.007-0.013,0.013-0.019c0.005-0.005,0.013-0.007,0.018-0.012l32.067-32.182c0.003-0.003,0.004-0.007,0.007-0.01  c0.006-0.006,0.014-0.011,0.02-0.017C55.75,26.276,60.688,13.553,57.903,6.506z M18.034,39.673c-3.557,0-6.45-2.895-6.45-6.452  c0-3.557,2.894-6.451,6.45-6.451c3.558,0,6.453,2.894,6.453,6.451C24.486,36.778,21.592,39.673,18.034,39.673z M50.102,14.722  c-2.388,0-4.33-1.942-4.33-4.33c0-2.387,1.942-4.329,4.33-4.329c2.387,0,4.328,1.942,4.328,4.329  C54.43,12.779,52.488,14.722,50.102,14.722z"/></svg>
+                                                </div>
+                                                <span style="margin-left: 5px;">Доставка</span>
+                                            </li>
+                                            <li style="display: flex; align-items: center;">
+                                                <div style="width: 30px; display: flex; justify-content: center; align-items: center">
+                                                    <svg width="20" height="20" data-name="Layer 1" id="Layer_1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title/><path d="M19,4H5A3,3,0,0,0,2,7V17a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V7A3,3,0,0,0,19,4Zm1,10.3H17a2.3,2.3,0,0,1,0-4.6h3ZM20,8H17a4,4,0,0,0,0,8h3v1a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V7A1,1,0,0,1,5,6H19a1,1,0,0,1,1,1Zm-4,4a1,1,0,1,0,1-1A1,1,0,0,0,16,12Z"/></svg>
+                                                </div>
+                                                <span style="margin-left: 5px;">Оплата</span>
+                                            </li>
+                                            <li style="display: flex; align-items: center;">
+                                                <div style="width: 30px; display: flex; justify-content: center; align-items: center">
+                                                    <img width="20" height="20" src="https://img.icons8.com/ios/50/key-exchange.png" alt="key-exchange"/>
+                                                </div>
+                                                <span style="margin-left: 5px;">Лизинг</span>
+                                            </li>
+                                        </ul>
+                                    </li>
+
                                 </ul>
                         </div>
                     </nav>
@@ -476,7 +560,6 @@
                                     </svg>
                                 </div>
                                 <span class="text-menu">Каталог</span>
-                                <svg class="icon-mm-arrow"><use xlink:href="catalog/view/theme/chameleon/image/sprite.svg#icon-arrow-right"></use></svg>
                             </div>
                             <div id="ch_mobm_contact" class="mobm-list-item dflex align-items-center">
                                 <span class="mm-icon-left">
@@ -485,7 +568,6 @@
                                     </svg>
                                 </span>
                                 <span class="text-menu">Контакты</span>
-                                <svg class="icon-mm-arrow"><use xlink:href="catalog/view/theme/chameleon/image/sprite.svg#icon-arrow-right"></use></svg>
                             </div>
                         </div>
                         <div>
