Update mobile nav & footer

--- a/Header/index.html
+++ b/Header/index.html
@@ -34,6 +34,9 @@
         <header class="header-main">
             <div class="container header-container-main">
                 <div class="header-container">
+                    <div class="header-search mobile-search">
+                        <?xml version="1.0" ?><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g><path d="M0 0h24v24H0z" fill="none"/><path d="M18.031 16.617l4.283 4.282-1.415 1.415-4.282-4.283A8.96 8.96 0 0 1 11 20c-4.968 0-9-4.032-9-9s4.032-9 9-9 9 4.032 9 9a8.96 8.96 0 0 1-1.969 5.617zm-2.006-.742A6.977 6.977 0 0 0 18 11c0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7a6.977 6.977 0 0 0 4.875-1.975l.15-.15z"/></g></svg>
+                    </div>
                     <div class="header-logo">
                         <svg class="header-logo-svg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="170px" height="44px" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
                         viewBox="0 0 424.01 102.73"
@@ -67,7 +70,6 @@
                         <path class="fil5" d="M21.27 75.58c12.86,0 19.97,-6.4 19.97,-16.02 0,-17.82 -27.09,-13.37 -27.09,-19.47 0,-2.02 1.58,-3.45 5.18,-3.45 4.74,0 9.98,1.65 14.01,4.95l6.75 -8.83c-5.1,-4.39 -11.78,-6.69 -19.47,-6.69 -12.29,0 -19.11,7.19 -19.11,15.24 0,18.46 27.16,13.22 27.16,19.76 0,2.29 -2.59,3.95 -6.83,3.95 -6.54,0 -11.85,-2.88 -15.3,-6.33l-6.54 9.27c4.81,4.6 11.57,7.62 21.27,7.62zm228.39 -13.65l0 -9.27 -17.24 0 0 9.27 17.24 0zm61.3 12.79l-18.1 -47.93 -15.52 0 -18.04 47.93 14.02 0 2.37 -6.9 18.89 0 2.37 6.9 14.01 0zm-19.75 -17.68l-12.22 0 6.11 -18.03 6.11 18.03zm56.84 17.68l18.11 -47.93 -14.01 0 -11.86 34.56 -11.78 -34.56 -14.01 0 18.03 47.93 15.52 0zm50.1 0c15.01,0 25.86,-9.13 25.86,-24 0,-14.87 -10.85,-23.93 -25.94,-23.93l-20.11 0 0 47.93 20.19 0zm-0.08 -10.78l-7.76 0 0 -26.37 7.84 0c8.76,0 13.22,5.75 13.22,13.15 0,7.11 -4.89,13.22 -13.3,13.22zm-298.18 10.78l0 -47.93 -12.36 0 0 17.97 -19.91 0 0 -17.97 -12.35 0 0 47.93 12.35 0 0 -19.19 19.91 0 0 19.19 12.36 0zm40.1 0.86c14.66,0 25.58,-10.2 25.58,-24.79 0,-14.58 -10.92,-24.79 -25.58,-24.79 -2.67,0 -5.21,0.34 -7.59,0.98 0.39,1.1 0.6,2.29 0.6,3.52 0,5.78 -4.69,10.47 -10.47,10.47 -2.06,0 -3.98,-0.59 -5.6,-1.61 -1.66,3.35 -2.59,7.2 -2.59,11.43 0,14.59 10.99,24.79 25.65,24.79zm0 -10.92c-7.97,0 -13.08,-6.11 -13.08,-13.87 0,-7.83 5.11,-13.87 13.08,-13.87 7.9,0 13.01,6.04 13.01,13.87 0,7.76 -5.11,13.87 -13.01,13.87zm52.47 10.06l0 -16.1 11.64 0c10.77,0 16.66,-7.25 16.66,-15.88 0,-8.69 -5.89,-15.95 -16.66,-15.95l-24 0 0 47.93 12.36 0zm9.98 -26.87l-9.98 0 0 -10.28 9.98 0c3.31,0 5.75,1.87 5.75,5.17 0,3.24 -2.44,5.11 -5.75,5.11z"/>
                         </g>
                         </svg>
-            
                     </div>
                     <div class="header-menu-burger" id="header-menu-burger">
                         <svg style="width: 22px; height: 18px; color: #fff" id="icon-menu1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 22 18">
@@ -76,7 +78,6 @@
                     </div>
                     <div onclick="openNav();" class="mobile-burger">
                         <svg fill="none" height="28" viewBox="0 0 28 28" width="28" xmlns="http://www.w3.org/2000/svg"><path d="M4 7C4 6.44771 4.44772 6 5 6H24C24.5523 6 25 6.44771 25 7C25 7.55229 24.5523 8 24 8H5C4.44772 8 4 7.55229 4 7Z" fill="black"/><path d="M4 13.9998C4 13.4475 4.44772 12.9997 5 12.9997L16 13C16.5523 13 17 13.4477 17 14C17 14.5523 16.5523 15 16 15L5 14.9998C4.44772 14.9998 4 14.552 4 13.9998Z" fill="black"/><path d="M5 19.9998C4.44772 19.9998 4 20.4475 4 20.9998C4 21.552 4.44772 21.9997 5 21.9997H22C22.5523 21.9997 23 21.552 23 20.9998C23 20.4475 22.5523 19.9998 22 19.9998H5Z" fill="black"/></svg>
-                        <span>Меню</span>
                     </div>
                 </div>
                 <div class="header-search-pannel">
@@ -928,6 +929,43 @@
                     <p>Аксессуары и запчасти для двигателей</p>
                 </div>
             </div>
+        </div>
+        <div class="mobile-footer">
+            <div>
+                <div style="display: flex; justify-content: center; align-items: center">
+                    <svg width="20px" height="20px" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.5401 0.883573C13.9751 -0.294524 16.0249 -0.294525 17.4599 0.883573L28.545 9.98377C29.4712 10.7442 30 11.8851 30 13.0796V26.0206C30 28.1828 28.2824 30 26.085 30H3.91496C1.71765 30 0 28.1828 0 26.0206V13.0796C0 11.8851 0.528759 10.7442 1.45505 9.98377L12.5401 0.883573ZM15.6178 3.12751C15.2535 2.82847 14.7465 2.82847 14.3822 3.12751L3.29719 12.2277C3.05479 12.4267 2.90323 12.7383 2.90323 13.0796V26.0206C2.90323 26.6505 3.39132 27.0968 3.91496 27.0968H26.085C26.6087 27.0968 27.0968 26.6505 27.0968 26.0206V13.0796C27.0968 12.7383 26.9452 12.4267 26.7028 12.2277L27.6239 11.1057L26.7028 12.2277L15.6178 3.12751Z" fill="#151528"></path></svg>
+                </div>
+                <div class="mob-footer-title">Главная</div>
+            </div>
+
+            <div>
+                <div style="display: flex; justify-content: center; align-items: center">
+                    <svg width="20px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M7 16.2222C7 16.6518 6.66421 17 6.25 17H3.75C3.33579 17 3 16.6518 3 16.2222C3 15.7927 3.33579 15.4444 3.75 15.4444H6.25C6.66421 15.4444 7 15.7927 7 16.2222Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M7 10C7 10.4296 6.66421 10.7778 6.25 10.7778H3.75C3.33579 10.7778 3 10.4296 3 10C3 9.57045 3.33579 9.22222 3.75 9.22222H6.25C6.66421 9.22222 7 9.57045 7 10Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M7 3.77778C7 4.20733 6.66421 4.55556 6.25 4.55556H3.75C3.33579 4.55556 3 4.20733 3 3.77778C3 3.34822 3.33579 3 3.75 3H6.25C6.66421 3 7 3.34822 7 3.77778Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M17 16.2222C17 16.6518 16.6642 17 16.25 17H8.75C8.33579 17 8 16.6518 8 16.2222C8 15.7927 8.33579 15.4444 8.75 15.4444H16.25C16.6642 15.4444 17 15.7927 17 16.2222Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M12.5 8.7037C13.6046 8.7037 14.5 7.77511 14.5 6.62963C14.5 5.48415 13.6046 4.55556 12.5 4.55556C11.3954 4.55556 10.5 5.48415 10.5 6.62963C10.5 7.77511 11.3954 8.7037 12.5 8.7037ZM12.5 10.2593C14.433 10.2593 16 8.63422 16 6.62963C16 4.62504 14.433 3 12.5 3C10.567 3 9 4.62504 9 6.62963C9 8.63422 10.567 10.2593 12.5 10.2593Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M15.5528 12.5652C15.3058 12.6933 15.0055 12.5895 14.882 12.3333L13.8292 10.1498C13.7057 9.89365 13.8058 9.58219 14.0528 9.45412C14.2998 9.32605 14.6001 9.42987 14.7236 9.686L15.7764 11.8695C15.8999 12.1257 15.7998 12.4371 15.5528 12.5652Z"></path></svg>
+                </div>
+                <div class="mob-footer-title">Каталог</div>
+            </div>
+
+            <div>
+                <div style="display: flex; justify-content: center; align-items: center">
+                    <svg width="20px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 19C8.32843 19 9 18.3284 9 17.5C9 16.6716 8.32843 16 7.5 16C6.67157 16 6 16.6716 6 17.5C6 18.3284 6.67157 19 7.5 19Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M14.5 19C15.3284 19 16 18.3284 16 17.5C16 16.6716 15.3284 16 14.5 16C13.6716 16 13 16.6716 13 17.5C13 18.3284 13.6716 19 14.5 19Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M3.44198 3.75H1V2.25H4C4.33121 2.25 4.6232 2.46725 4.71837 2.78449L7.29078 11.3592C7.4494 11.8879 7.93605 12.25 8.48806 12.25H14.4914C15.0495 12.25 15.54 11.88 15.6933 11.3434L17.0057 6.75H10.5V5.25H18C18.2353 5.25 18.457 5.36047 18.5988 5.54835C18.7405 5.73624 18.7858 5.97975 18.7211 6.20604L17.1356 11.7555C16.7983 12.9361 15.7192 13.75 14.4914 13.75H8.48806C7.27364 13.75 6.203 12.9534 5.85404 11.7902L3.44198 3.75Z"></path></svg>
+                </div>
+                <div class="mob-footer-title">Корзина</div>
+            </div>
+
+            <div>
+                <div style="display: flex; justify-content: center; align-items: center">
+                    <svg width="20px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.25 1.25H16.75V16.1315C16.75 17.5292 15.1922 18.3629 14.0293 17.5876L10 14.9014L5.97073 17.5876C4.80775 18.3629 3.25 17.5292 3.25 16.1315V1.25ZM4.75 2.75V16.1315C4.75 16.3312 4.97254 16.4503 5.13867 16.3395L9.58397 13.376C9.8359 13.208 10.1641 13.208 10.416 13.376L14.8613 16.3395C15.0275 16.4503 15.25 16.3312 15.25 16.1315V2.75H4.75Z"></path></svg>
+                </div>
+                <div class="mob-footer-title">Избранное</div>
+            </div>
+
+            <div>
+                <div style="display: flex; justify-content: center; align-items: center">
+                    <svg width="20px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.25391 7C5.25391 4.37665 7.38055 2.25 10.0039 2.25C12.6273 2.25 14.7539 4.37665 14.7539 7C14.7539 9.62335 12.6273 11.75 10.0039 11.75C7.38055 11.75 5.25391 9.62335 5.25391 7ZM10.0039 3.75C8.20898 3.75 6.75391 5.20507 6.75391 7C6.75391 8.79493 8.20898 10.25 10.0039 10.25C11.7988 10.25 13.2539 8.79493 13.2539 7C13.2539 5.20507 11.7988 3.75 10.0039 3.75Z"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M1.43619 16.5024C3.1879 14.5055 6.41729 13.25 9.999 13.25C13.5822 13.25 16.8129 14.5066 18.5641 16.505C18.8371 16.8165 18.8058 17.2903 18.4943 17.5633C18.1828 17.8363 17.7089 17.8051 17.4359 17.4936C16.0507 15.9127 13.2906 14.75 9.999 14.75C6.70886 14.75 3.94968 15.9117 2.56381 17.4916L1.43619 16.5024Z"></path></svg>
+                </div>
+                <div class="mob-footer-title">Войти</div>
+            </div>
+
         </div>
         <script src="./main.js"></script>
 </body>
